# Sonance-Py

./: AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml  publish.yml  typecheck.yml
Docs/: http-api.md
Docs/example-data/: README.md  eq-settings-preset-0.json  general-settings.json  in-out-settings.json
src/sonance_py/: __init__.py  _wire_models.py  amplifier.py  cli.py  models.py  output_cli.py
tests/: test_amplifier.py  test_models.py  test_output_cli.py
