[project]
name = "sonance-py"
version = "0.1.0"
description = "A library and CLI for interacting with "
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]
