[project]
name = "sonance-py"
version = "0.1.0"
description = "An async Python library and CLI for interacting with Sonance DSP amplifiers."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.12.0",
    "pydantic>=2.12.0",
    "typer>=0.12.5",
]

[project.scripts]
sonance = "sonance_py.cli:app"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]


[tool.pyright]
include = ["src", "main.py"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
